# graph-ai-task-manager

./: .dockerignore  .flake8  .gitattributes  .gitignore  CALENDAR_IMPROVEMENTS.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  ETL_PIPELINE.md  GOOGLE_CALENDAR_SETUP.md  GRAPHRAG_CAPABILITIES.md  INSTALL.md  POSTGRESQL_VS_NEO4J_COMPARISON.md  README.md  TROUBLESHOOTING.md  api.py  app.py  aws_research_pipeline.py  create_and_load_sample.py  create_tables.sql  deploy_research_pipeline.py  docker-compose.prod.yml  docker-compose.yml  emails.ipynb  gmail_app.py  improved_neo4j_agent.py  instruction.md  langgraph_memory_agent.py  langgraph_memory_agent_persistent.py  main.py  mypy.ini  pyproject.toml  requirements.txt  start_services.py
.github/workflows/: ci.yml  deploy.yml  security.yml
.streamlit/: config.toml
agent_results/: emails.json  entities.json  summary.json  tasks.json
notebooks/: 01_data_exploration.ipynb  02_ai_processing.ipynb  03_predictive_modeling.ipynb  04_prescriptive_analytics.ipynb  05_neo4j_integration.ipynb
pages/: AI_Chatbot.py  My_Calendar.py  calendar_view.py
src/: __init__.py  ai_agent.py  email_parser.py  graph_builder.py  nlp_processor.py  task_manager.py
utils/: __init__.py  api.py  calendar_utils.py  chainqa_graph_agent.py  database.py  email_parser.py  embedding.py  gmail_enhanced_extraction.py  gmail_realtime_processor.py  gmail_service.py  gmail_smart_filters.py  gmail_task_integration.py  google_calendar_service.py  graph_writer.py  graphrag.py  langchain_neo4j_agent.py  langgraph_dag.py  langgraph_nodes.py  langgraph_unified_memory_agent.py  neo4j_graph_writer.py  neo4j_graphrag.py  notion_utils.py  prompt_template.py  ragas_evaluator.py  tools.py  upload_helpers.py
