[project]
name = "graph-ai-task-manager"
version = "0.1.0"
description = "Automated Task Manager with Neo4j, LangGraph, and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "langgraph>=0.2.31",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-neo4j>=0.0.1",
    "openai>=1.93.0",
    "neo4j>=5.28.1",
    "numpy>=1.26.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "transformers>=4.35.0",
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.11.0",
    "networkx>=3.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "fastapi>=0.116.1",
    "uvicorn>=0.27.0",
    "streamlit-calendar>=1.3.1",
    "email-validator>=2.0.0",
    "python-dateutil>=2.8.0",
    "psutil>=5.9.0",
    "pyvis>=0.3.2",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.176.0",
    "ics>=0.7.2",
    "plotly>=6.2.0",
]
